Bug 123372 - No anti-aliasing for image with OpenGL enabled
Summary: No anti-aliasing for image with OpenGL enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.2.0.2 rc
Hardware: All Windows (All)
: medium normal
Assignee: Luboš Luňák
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords:
: 79334 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2019-02-11 20:16 UTC by Telesto
Modified: 2019-04-12 23:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (17.54 KB, application/vnd.oasis.opendocument.text)
2019-02-11 20:16 UTC, Telesto
Details
Screenshot with OpenGL enabled (18.44 KB, image/png)
2019-02-11 20:16 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-02-11 20:16:17 UTC
Description:
No anti-aliasing for image with OpenGL enabled. Spin-off of bug 79334




Steps to Reproduce:
1. Open the attached file with OpenGL enabled & compare with Normal mode

Actual Results:
Artifacts

Expected Results:
Smooth borders


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: 0b21f6556b6fff76290d1095089da89532365215
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-02-11 20:16:31 UTC
Created attachment 149169 [details]
Example file
Comment 2 Telesto 2019-02-11 20:16:58 UTC
Created attachment 149170 [details]
Screenshot with OpenGL enabled
Comment 3 V Stuart Foote 2019-02-13 02:43:30 UTC
Also present in 6.2 on Windows 10 with Intel HD Graphics 620 (25.20.100.6471) and
Version: 6.2.0.2 (x64)
Build ID: 2ce5217b30a543f7666022df50f0562f82be0cff
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 4 Luboš Luňák 2019-03-22 12:52:15 UTC
https://gerrit.libreoffice.org/#/c/69556/
Comment 5 Commit Notification 2019-03-22 17:04:04 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c4217f888a2964ca1371bd22297895b4737d2c38%5E%21

opengl's drawBitmap() should also scale properly if needed (tdf#123372)

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-03-27 08:55:57 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/91aaf86ad6137cbdef2ab6772f37503af0ba0e2b%5E%21

opengl's drawBitmap() should also scale properly if needed (tdf#123372)

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-04-12 10:20:13 UTC
*** Bug 79334 has been marked as a duplicate of this bug. ***
Comment 8 Aron Budea 2019-04-12 23:15:12 UTC
Verified fixed, thanks Luboš!

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 3fe3bd8a90d6dc53b05b9236185af3916fc5375d
CPU threads: 16; OS: Windows 6.1; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL