opengl's drawBitmap() should also scale properly if needed (tdf#123372)

If the bitmap to be drawn will need to be scale for drawing, OpenGL
handles this by scaling, but the scaling is of poor quality. Other
backends scale in such a case with a good quality, and e.g. opengl's
drawAlphaBitmap() also does the same check, so copy that check
to drawBitmap() as well.

Change-Id: If6a457c69c6676d03fa4046b9910683f51479d21
Reviewed-on: https://gerrit.libreoffice.org/69556
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>